P5 E-learning/force-app/main/default/objects/RespuestaResponse__c/RespuestaResponse__c.object-meta.xml
<CustomObject>
    <description>Los registros son las respuestas que el usuario selecciona como &quot;respondidas&quot;, se referencia a una pregunta y unidad respectivamente.</description>
    <label>RespuestaResponse</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>RespuestaResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RespuestaResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>