P5 E-learning/force-app/main/default/objects/RespuestaResponse__c/fields/Pregunta__c.field-meta.xml
<CustomField>
    <fullName>Pregunta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pregunta</label>
    <referenceTo>Pregunta__c</referenceTo>
    <relationshipLabel>RespuestaResponses</relationshipLabel>
    <relationshipName>RespuestaResponses</relationshipName>
    <type>Lookup</type>
</CustomField>