P5 E-learning/force-app/main/default/objects/RespuestaResponse__c/fields/Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Respuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Respuesta</label>
    <referenceTo>Respuesta__c</referenceTo>
    <relationshipLabel>RespuestaResponses</relationshipLabel>
    <relationshipName>RespuestaResponses</relationshipName>
    <type>Lookup</type>
</CustomField>