P5 E-learning/force-app/main/default/objects/RespuestaResponse__c/fields/UnidadUser__c.field-meta.xml
<CustomField>
    <fullName>UnidadUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnidadUser</label>
    <referenceTo>UnidadUser__c</referenceTo>
    <relationshipLabel>RespuestaResponses</relationshipLabel>
    <relationshipName>RespuestaResponses</relationshipName>
    <type>Lookup</type>
</CustomField>